--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "leaflet": "^1.7.1",
     "vue": "^2.5.2",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
