--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@innologica/vue-dropdown-menu": "^0.1.4",
     "axios": "^0.21.1",
     "leaflet": "^1.7.1",
     "vue": "^2.5.2",
     "vue-cookies": "^1.7.4",
+    "vue-dropdowns": "^1.1.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
