--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@geoman-io/leaflet-geoman-free": "^2.11.2",
     "@innologica/vue-dropdown-menu": "^0.1.4",
     "@turf/turf": "^6.5.0",
     "axios": "^0.21.1",
     "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.0",
+    "lodash": "^4.17.21",
+    "validator": "^13.6.0",
     "vue": "^2.5.2",
     "vue-cookies": "^1.7.4",
     "vue-dropdowns": "^1.1.2",
