--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.5.2",
     "vue-cookies": "^1.7.4",
     "vue-dropdowns": "^1.1.2",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
