--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@geoman-io/leaflet-geoman-free": "^2.11.2",
     "@innologica/vue-dropdown-menu": "^0.1.4",
     "@turf/turf": "^6.5.0",
+    "@types/leaflet": "^1.7.5",
     "axios": "^0.21.1",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.0",
