--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@innologica/vue-dropdown-menu": "^0.1.4",
     "@turf/turf": "^6.5.0",
     "@types/leaflet": "^1.7.5",
+    "@types/lodash": "^4.14.178",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.0",
     "lodash": "^4.17.21",
