--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@types/proj4": "^2.5.2",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "fast-sha256": "^1.3.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "proj4": "^2.7.5",
+    "tweetnacl-util": "^0.15.1",
     "validator": "^13.6.0",
     "vue": "^2.5.2",
     "vue-cookies": "^1.7.4",
